# observability-agent

./: .black  .copilotignore  .env.example  .ruff.toml  IMPLEMENTATION_STATUS.md  PLANNING_COMPLETE.md  QUICKSTART.md  README.md  demo.py  langgraph.json  langgraph_app.py  pyproject.toml  requirements.txt  research.md
.cursor/rules/: specify-rules.mdc
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
config/: .env.example  config.yaml
copilot-ignore-speckit-docs/: week-1.md
docs/README/: week-1.md  week-2.md
docs/speckit-docs/: week-1.md
speckit-docs/: week-1.md
specs/001-dashboard-agent/: CLARIFICATION_COMPLETE.md  PLANNING_COMPLETE.md  TASKS_COMPLETE.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-dashboard-agent/checklists/: requirements.md
specs/001-dashboard-agent/contracts/: agent-interface.md  config-schema.json  grafana-mcp.md
specs/001-grafana-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-grafana-agent/checklists/: requirements.md
specs/001-grafana-agent/contracts/: agent_interface.md
specs/001-natural-language-metrics/: clarifications.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-natural-language-metrics/checklists/: requirements.md
specs/001-natural-language-metrics/contracts/: agent-contract.md  agent-node.md  metric-tool-contract.md  metrics-query-tool.md  ui-contract.md
src/: __init__.py  agent.py  config.py  llm.py  main.py  mcp_client.py  tools.py  ui.py
src/agent/: __init__.py  metrics_agent.py  prompts.py  query_parser.py
src/models/: __init__.py  query.py  result.py
src/tools/: __init__.py  grafana_metrics_tool.py  mcp_client.py
tests/: conftest.py  test_agent.py
